--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 node_modules/
+*.lock
+*-lock.json
 
 # Expo
 .expo/
@@ -16,6 +18,8 @@ expo-env.d.ts
 *.p12
 *.key
 *.mobileprovision
+android
+ios
 
 # Metro
 .metro-health-check*
