--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "expo start",
     "server": "node ./server/dist/index.js",
     "postinstall": "cd server && yarn",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
     "web": "expo start --web",
     "run:ios": "expo run:ios",
+    "run:android": "expo run:android",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "jest": {
     "preset": "jest-expo"
